--- a/src/main/webapp/i18n/zh-cn/homework.json
+++ b/src/main/webapp/i18n/zh-cn/homework.json
@@ -20,7 +20,8 @@
       "fileName": "File Name",
       "owner": "Owner",
       "className": "Class Name",
-      "editTime": "Edit Time"
+      "editTime": "Edit Time",
+      "operation":"operation"
     }
   }
 }
