--- a/src/main/webapp/i18n/zh-cn/user-management.json
+++ b/src/main/webapp/i18n/zh-cn/user-management.json
@@ -25,6 +25,8 @@
     "createdBy": "创建人",
     "createdDate": "创建时间",
     "lastModifiedBy": "最近修改人",
-    "lastModifiedDate": "最近修改时间"
+    "lastModifiedDate": "最近修改时间",
+    "operation":"操作"
   }
 }
+
